[package]
name = "website-bundler"
version = "0.1.0"
edition = "2024"

[dependencies]
minify-html = "=0.16.5" # last version before they used oxc
serde_json = "1.0"
json5 = "1.3"

axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full"] }

anyhow = "1"
notify = "8"
walkdir = "2"
clap = { version = "4", features = ["derive"] }

oxc = { version = "0.116", features = ["mangler", "minifier", "codegen"] }